<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="hello_world">Hai Dunia!</string>
    <string name="img_desc_poster">Poster</string>
    <string name="percent">%</string>
    <string name="language_settings">Language Settings</string>
    <string name="tab_movie">Movies</string>
    <string name="tab_tvshow">Tv Shows</string>
    <string name="extra_movie_detail">MOVIE_DETAIL</string>
    <string name="extra_tvshow_detail">TVSHOW_DETAIL</string>
    <string name="release">Release</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="story">Story</string>
    <string name="featured_crew">F Crew</string>
    <string name="user_score">Score</string>
    <string name="director">Director</string>
    <string name="screenplay">Screenplay</string>
    <string name="writer">Writer</string>
    <string name="text_plain">text/plain</string>
    <string name="extra_subject">MADE 2019</string>
    <string name="extra_body">Dicoding Academy Awesome (https://www.dicoding.com/)</string>
    <string name="share_via">Kirim Via</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum euismod urna consequat mollis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque molestie, ligula id aliquet molestie, erat augue dictum augue, nec condimentum dui mi a ante. Praesent porttitor mi quis tincidunt lobortis. Donec malesuada ligula eu molestie interdum. Duis nec rutrum diam. Ut nibh dolor, feugiat consequat sagittis ut, egestas nec odio. Cras ullamcorper, purus vitae hendrerit finibus, urna nisi pharetra leo, ut iaculis ante leo quis metus. Aenean mattis est quis interdum blandit. Suspendisse eget felis velit. \n</string>
    <string-array name="data_image_poster">
        <item>@drawable/spiderman</item>
        <item>@drawable/alita</item>
        <item>@drawable/thelionking</item>
        <item>@drawable/toystory</item>
        <item>@drawable/crawl</item>
        <item>@drawable/hellboy</item>
        <item>@drawable/shazam</item>
        <item>@drawable/johnwick</item>
        <item>@drawable/detective_conan</item>
        <item>@drawable/captenmarvel</item>
    </string-array>
    <string-array name="data_movie_title">
        <item>Spider-Man: Far from Home</item>
        <item>Alita: Battle Angel</item>
        <item>The Lion King</item>
        <item>Toy Story 4</item>
        <item>Crawl</item>
        <item>Hellboy</item>
        <item>Shazam!</item>
        <item>John Wick: Chapter 3 – Parabellum</item>
        <item>Detective Conan: The Fist of Blue Sapphire</item>
        <item>Captain Marvel</item>
    </string-array>
    <string-array name="data_movie_overview">
        <item>Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.</item>
        <item>When Alita awakens with no memory of who she is in a future world she does not recognize, she is taken in by Ido, a compassionate doctor who realizes that somewhere in this abandoned cyborg shell is the heart and soul of a young woman with an extraordinary past.</item>
        <item>Simba idolises his father, King Mufasa, and takes to heart his own royal destiny. But not everyone in the kingdom celebrates the new cub\'s arrival. Scar, Mufasa\'s brother—and former heir to the throne—has plans of his own. The battle for Pride Rock is ravaged with betrayal, tragedy and drama, ultimately resulting in Simba\'s exile. With help from a curious pair of newfound friends, Simba will have to figure out how to grow up and take back what is rightfully his.</item>
        <item>Woody has always been confident about his place in the world and that his priority is taking care of his kid, whether that\'s Andy or Bonnie. But when Bonnie adds a reluctant new toy called Forky to her room, a road trip adventure alongside old and new friends will show Woody how big the world can be for a toy.</item>
        <item>While struggling to save her father during a Category 5 hurricane, a young woman finds herself trapped inside a flooding house and fighting for her life against Florida\’s most savage and feared predators.</item>
        <item>Hellboy comes to England, where he must defeat Nimue, Merlin\'s consort and the Blood Queen. But their battle will bring about the end of the world, a fate he desperately tries to turn away.</item>
        <item>A boy is given the ability to become an adult superhero in times of need with a single magic word.</item>
        <item>Super-assassin John Wick returns with a $14 million price tag on his head and an army of bounty-hunting killers on his trail. After killing a member of the shadowy international assassin\’s guild, the High Table, John Wick is excommunicado, but the world\’s most ruthless hit men and women await his every turn.</item>
        <item>23rd movie in the "Detective Conan" franchise.</item>
        <item>The story follows Carol Danvers as she becomes one of the universe\’s most powerful heroes when Earth is caught in the middle of a galactic war between two alien races. Set in the 1990s, Captain Marvel is an all-new adventure from a previously unseen period in the history of the Marvel Cinematic Universe.</item>
    </string-array>
    <string-array name="data_movie_release">
        <item>July 2, 2019</item>
        <item>February 14, 2019</item>
        <item>July 19, 2019</item>
        <item>June 21, 2019</item>
        <item>April 12, 2019</item>
        <item>March 23, 2019</item>
        <item>May 17, 2019</item>
        <item>July 12, 2019</item>
        <item>April 12, 2019</item>
        <item>March 8, 2019</item>
    </string-array>
    <string-array name="data_movie_genres">
        <item>Action, Adventure, Science Fiction</item>
        <item>Action, Science Fiction, Thriller, Adventure</item>
        <item>Adventure, Animation, Family, Drama, Action</item>
        <item>Adventure, Animation, Comedy, Family</item>
        <item>Thriller, Action, Horror</item>
        <item>Action, Adventure, Fantasy, Horror, Science Fiction</item>
        <item>Action, Comedy, Fantasy</item>
        <item>Crime, Action, Thriller</item>
        <item>Animation, Action, Drama, Mystery, Comedy</item>
        <item>Action, Adventure, Science Fiction</item>
    </string-array>
    <string-array name="data_movie_rating">
        <item>78</item>
        <item>68</item>
        <item>62</item>
        <item>78</item>
        <item>62</item>
        <item>50</item>
        <item>71</item>
        <item>71</item>
        <item>50</item>
        <item>70</item>
    </string-array>
    <string-array name="data_movie_director">
        <item>Jon Watts</item>
        <item>Robert Rodriguez</item>
        <item>Jon Favreau</item>
        <item>Josh Cooley</item>
        <item>Alexandre Aja</item>
        <item>Mike Mignola</item>
        <item>David F. Sandberg</item>
        <item>Chad Stahelski</item>
        <item>Tomoka Nagaoka</item>
        <item>Anna Boden</item>
    </string-array>
    <string-array name="data_movie_screenplay">
        <item>Erik Sommers</item>
        <item>Laeta Kalogridis</item>
        <item>Jeff Nathanson</item>
        <item>Andrew Stanton</item>
        <item>Shawn Rasmussen</item>
        <item>Andrew Cosby</item>
        <item>Henry Gayden</item>
        <item>Chris Collins</item>
        <item>Tomoka Nagaoka</item>
        <item>Geneva Robertson-Dworet</item>
    </string-array>
    <string-array name="data_movie_writer">
        <item>Chris McKenna</item>
        <item>James Cameron</item>
        <item>Brenda Chapman</item>
        <item>John Lasseter</item>
        <item>Michael Rasmussen</item>
        <item>Mike Mignola</item>
        <item>Darren Lemke</item>
        <item>Derek Kolstad</item>
        <item>Takahiro Ohkura</item>
        <item>Meg LeFauve</item>
    </string-array>
    <string-array name="data_image_poster_tvshow">
        <item>@drawable/dragonball_tvshows</item>
        <item>@drawable/fearthewalkingdead_tvshows</item>
        <item>@drawable/greysanathomy_tvshows</item>
        <item>@drawable/onepunchman_tvshows</item>
        <item>@drawable/supergirl_tvshows</item>
        <item>@drawable/seenoevil</item>
        <item>@drawable/isekaicheatmagician</item>
        <item>@drawable/strangerthings</item>
        <item>@drawable/theflash</item>
        <item>@drawable/arrow</item>
    </string-array>
    <string-array name="data_tvshow_title">
        <item>Dragon Ball</item>
        <item>Fear The Walking Dead</item>
        <item>Grey\'s Anatomy</item>
        <item>One-Punch Man</item>
        <item>Super Girl</item>
        <item>See No Evil: The Moors Murders</item>
        <item>Isekai Cheat Magician</item>
        <item>Stranger Things</item>
        <item>The Flash</item>
        <item>Arrow</item>
    </string-array>
</resources>